# Creatory

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260206_0001_base_schema.py
app/: main.py  worker.py
app/api/: deps.py  permissions.py  router.py
app/core/: config.py  security.py
app/db/: models.py  session.py
app/schemas/: agent.py  auth.py  conversation.py  knowledge.py  mcp.py  media.py  orchestrator.py  workflow.py  workspace.py
app/services/: __init__.py  director.py  workflow_runner.py  workspace_bootstrap.py
creatory.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
creatory_core/: __init__.py  main.py  worker.py
creatory_core/api/: deps.py  permissions.py  router.py
creatory_core/core/: config.py  security.py  utils.py
creatory_core/db/: models.py  session.py
creatory_core/providers/: __init__.py  base.py  catalog.py  router.py  service.py
creatory_studio/: Dockerfile  package.json  tailwind.config.ts
docs/: brainstorm.md  conceptual_blueprint_v0.md  database-schema.md
frontend/: package-lock.json  package.json  tailwind.config.ts
infra/: README.md  docker-compose.dev.yml  docker-compose.yml
mcp/: README.md
scripts/: run_api.sh
tests/: test_architecture_services.py  test_director.py  test_health.py  test_utils.py
workflows/: README.md
(+79 files in other folders)
